[gd_scene load_steps=12 format=2]

[ext_resource path="res://Entities/Dog/Dog.gd" type="Script" id=1]
[ext_resource path="res://Entities/PickupArea.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Health.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/AggroArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://Entities/NoticeArea.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entities/AttackArea.tscn" type="PackedScene" id=6]
[ext_resource path="res://Entities/Combat.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/HealthDisplay.tscn" type="PackedScene" id=8]
[ext_resource path="res://Entities/Dog/dog-Sheet.png" type="Texture" id=9]
[ext_resource path="res://Entities/Mood.tscn" type="PackedScene" id=10]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.44885
height = 7.43864

[node name="Dog" type="KinematicBody2D"]
collision_mask = 2147483649
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.389767, 5.40108 )
rotation = 1.57079
shape = SubResource( 1 )

[node name="NoticeArea" parent="." instance=ExtResource( 5 )]

[node name="PickupArea" parent="." instance=ExtResource( 2 )]

[node name="AggroArea" parent="." instance=ExtResource( 4 )]
scale = Vector2( 0.75, 0.75 )

[node name="AttackArea" parent="." instance=ExtResource( 6 )]

[node name="Health" parent="." instance=ExtResource( 3 )]
MAX_HEALTH = 100
HEALTH_POINTS = 100
HEALTH_REGEN_WAIT = 5
HEALTH_REGEN_AMOUNT = 25

[node name="HealthDisplay" parent="." instance=ExtResource( 8 )]

[node name="Combat" parent="." instance=ExtResource( 7 )]
ATTACK_DAMAGE = 1.0
ATTACK_COOLDOWN = 0.7
KNOCKBACK_FORCE = 450

[node name="Mood" parent="." instance=ExtResource( 10 )]
MOOD_NAMES = {
0: "NEUTRAL",
1: "ANGRY",
2: "AFRAID"
}
weights = {
1: 1.0,
2: 1.0
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 9 )
hframes = 4

[editable path="Health"]
[editable path="Mood"]
